<resources>
    <string name="app_name">Loading App</string>
    <string name="app_description">Udacity Project 3</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="title_activity_detail">Result</string>

    <string name="glide_desc">Glide - Image Loading Library By BumpTech</string>
    <string name="loadapp_desc">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_desc">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="button_state_complete" translatable="false">Download</string>
    <string name="button_state_loading">Downloading</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="logo">logo</string>
</resources>
